--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0%;
     margin: 0%;
+    scrollbar-width: none;
 }
 
 header{
@@ -62,3 +63,29 @@ li:nth-child(odd):hover{
     margin: top;
     font-size: 14px;
 }
+
+#movie {
+    border: 4px solid orange;
+    background-color: orange;
+    width: 97%;
+    height: 90%;
+    top: 20px;   
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    display: block;
+}
+
+#data {
+    background-color: orange;
+    width: 97%;
+    height: 90%;
+    position: fixed;
+    top: 10vh; /* Ajusta la posición según sea necesario */
+    display: none;
+}
+
+
+
